fix: mobile alignment

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -386,3 +386,18 @@ body.night-mode .background {
 }
 
 
+@media screen and (max-width: 450px){
+    div.glass {
+        flex-direction: column;
+        align-items: center;
+        overflow-x:hidden;
+    }
+}
+
+@media screen and (max-width: 410px){
+    div.glass {
+        flex-direction: column;
+        align-items: flex-start;
+        overflow-x:hidden;
+    }
+}
